...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/label_card_number" />

        <co.omise.android.ui.CreditCardEditText
            android:id="@id/edit_card_number"
            style="?android:attr/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:nextFocusForward="@id/edit_card_name" />

        <TextView
            android:id="@id/text_card_number_error"
            style="?attr/editTextErrorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:orientation="vertical">

                    <co.omise.android.ui.ExpiryDateEditText
                        android:id="@id/edit_expiry_date"
                        style="?android:attr/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:hint="@string/hint_expiration_date"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@id/edit_security_code" />

                    <TextView
                        android:id="@id/text_expiry_date_error"
                        style="?attr/editTextErrorStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_separator_margin"
            android:text="@string/label_country" />

        <co.omise.android.ui.OmiseEditText
            android:id="@id/edit_country"
            style="?android:attr/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xsmall_margin"
            android:focusable="false" />

...
            style="?attr/editTextErrorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xsmall_margin"
            tools:text="Invalid input" />
        <TextView
            android:id="@+id/text_email_title"
            style="?attr/editTextLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_separator_margin"
            android:text="@string/label_email"
            android:visibility="gone"/>

        <co.omise.android.ui.OmiseEditText
            android:id="@+id/edit_email"
            style="?android:attr/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@id/edit_phone_number"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_email_error"
            style="?attr/editTextErrorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_phone_number_title"
            style="?attr/editTextLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_separator_margin"
            android:text="@string/label_phone_number"
            android:visibility="gone"/>
...
            style="?android:attr/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:nextFocusForward="@id/edit_street1"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_phone_number_error"
            style="?attr/editTextErrorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/billing_address_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?attr/editTextLabelStyle"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:nextFocusForward="@id/edit_city" />

            <TextView
                android:id="@id/text_street1_error"
                style="?attr/editTextErrorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:nextFocusForward="@id/edit_state" />

            <TextView
                android:id="@id/text_city_error"
                style="?attr/editTextErrorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:nextFocusForward="@id/edit_postal_code" />

            <TextView
                android:id="@id/text_state_error"
                style="?attr/editTextErrorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_marginTop="@dimen/xsmall_margin"
                tools:text="Invalid input" />

        </LinearLayout>

        <Button
            android:id="@id/button_submit"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:enabled="false"
            android:text="@string/button_pay"
...
