...
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:menu="@menu/menu_toolbar"
        app:title="@string/label_country" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/country_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/list_country_item" />
</LinearLayout>

