...
    <string name="error_loading_payment_methods">Unable to load payment methods</string>
    <string name="error_invalid_card_number">Credit card number is invalid</string>
    <string name="error_invalid_card_name">Card holder name is invalid</string>
    <string name="error_invalid_expiration_date">Card expiration date is invalid</string>
    <string name="error_invalid_security_code">CVV is invalid</string>
    <string name="error_invalid_full_name">Customer name is invalid</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_invalid_phone_number">Phone number is invalid</string>
    <string name="error_invalid">%1$s is invalid</string>
    <string name="error_required">%1$s is required</string>
    <string name="error_required_street1">Address is required</string>
    <string name="error_required_city">City is required</string>
    <string name="error_required_state">State is required</string>
...
